# service-templates

./: .gitlab-ci.yml  CNAME  CODEOWNERS  Caddyfile  Makefile  README.md  app.py  compose.yaml  docker-compose.yml  pyproject.toml
.devcontainer/: Caddyfile  compose.yaml  devcontainer.json
dash/: Dockerfile  example.py
docs/: mkdocs.yaml  pyproject.toml
docs/content/: advanced.md  auth.md  auxiliary-services.md  deployment.md  index.md  server-and-domain.md  ssh.md  webserver.md
docs/content/services/: alpinejs.md  dash.md  fastapi.md  marimo.md  pocketbase.md  streamlit.md  svelte.md  voila.md
fastapi/: Dockerfile  example.py
services/alpinejs/: Dockerfile  index.html
services/dash/: Dockerfile  pyproject.toml
services/fastapi/: Dockerfile  example.py  pyproject.toml
services/fastapi/backend/: main.py
services/marimo/: Dockerfile  notebook.py  pyproject.toml
services/pocketbase/: Dockerfile
services/streamlit/: Dockerfile  pyproject.toml
services/svelte/: Dockerfile  package-lock.json  package.json  vite.config.js
services/svelte/src/routes/: +page.svelte
services/voila/: Dockerfile  example.ipynb
streamlit/: .dockerignore  Dockerfile
voila/: Dockerfile  example.ipynb  pyproject.toml
