[tool.poetry]
name = "documentation for service-templates repository"
version = "0.1.0"
description = ""
authors = ["Christophe Cauet <ccauet@point-8.de>"]
license = "Creative Commons BY-NC-SA 4.0"
readme = "README.md"
packages = [{include = "documentation for service_templates repository"}]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
