[tool.poetry]
name = "voila-standalone-template"
version = "0.1.0"
description = ""
authors = ["Christophe Cauet <christophe@cauet.de>"]

[tool.poetry.dependencies]
python = "^3.10"
voila = "^0.3.5"
notebook = "^6.4.12"
pandas = "^1.4.3"
ipywidgets = "^7.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
