[tool.poetry]
name = "dash-standalone-template"
version = "0.1.0"
description = ""
authors = ["Christophe Cauet <christophe@cauet.de>"]

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.5.1"
pandas = "^1.4.3"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
