[tool.poetry]
name = "streamlit-standalone-template"
version = "0.1.0"
description = ""
authors = ["Christophe Cauet <christophe@cauet.de>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.9.0"
pandas = "^1.4.2"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
